--- a/Library.Service/Library.Service.csproj
+++ b/Library.Service/Library.Service.csproj
@@ -13,10 +13,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Features\Books\Queries\GetList\" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
@@ -25,6 +21,13 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Features\Categories\Commands\Create\" />
+	  <Folder Include="Features\Categories\Commands\Delete\" />
+	  <Folder Include="Features\Categories\Commands\Update\" />
+	  <Folder Include="Features\Categories\Queries\" />
 	</ItemGroup>
 
 </Project>
